layout/generic/nsFrame.h
@@ -345,7 +345,8 @@ public:
 
   NS_IMETHOD HandleMultiplePress(nsPresContext* aPresContext,
                          nsGUIEvent *    aEvent,
-                         nsEventStatus*  aEventStatus);
+                         nsEventStatus*  aEventStatus,
+                         PRBool          aControlHeld);
 
   NS_IMETHOD HandleDrag(nsPresContext* aPresContext,
                         nsGUIEvent *    aEvent,
@@ -359,7 +360,8 @@ public:
                                     nsSelectionAmount aAmountForward,
                                     PRInt32 aStartPos,
                                     nsPresContext* aPresContext,
-                                    PRBool aJumpLines);
+                                    PRBool aJumpLines,
+                                    PRBool aMultipleSelection);
 
 
   // Helper for GetContentAndOffsetsFromPoint; calculation of content offsets
